# Bot_seguridad_social

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_INDEX.md  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TAREAS.md  context_dump.txt  docker-compose.yml  manage.py  pyproject.toml
.agent/: INSTRUCTIONS.md
.agent/workflows/: add_adapter.md  dev_setup.md
.github/: PULL_REQUEST_TEMPLATE.md
chroma_db/: chroma.sqlite3
docs/: PATTERNS.md  TECNICO.md
docs/adr/: 0000-use-adr.md  (+1 more)
front/: .dockerignore  App.tsx  Dockerfile  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
rag_app/: .dockerignore  .env.example  Anses1.md  Dockerfile  QUICKSTART.md  api_main.py  main.py  pyproject.toml  requirements.txt
rag_app/adapters/chunkers/: docling_adapter.py  hybrid_chunker.py
rag_app/adapters/contextualizers/: gemini_manager.py
rag_app/adapters/embedders/: gemini_embedder.py
rag_app/adapters/http/: __init__.py  api_adapter.py  session_manager.py
rag_app/adapters/stores/: chroma_adapter.py
rag_app/config/: leyes_config.json  settings.py
rag_app/docs/: API.md  TECHNICAL_ARCHITECTURE.md  architecture.md
rag_app/domain/: api_schemas.py  models.py
rag_app/ports/: chunker.py  contextualizer.py  embedder.py  vector_store.py
rag_app/scripts/: ContextCount.py  bootstrap_env.py  ingest_single_law.py  reset_db.py  setup_db.py  setup_from_md.py  test_hybridChunker.py  verify_setup.sh
rag_app/services/: ingestion_service.py  removal_service.py  retrieval_service.py
rag_app/tests/: audit_performance.py
rag_app/utils/: logger.py
scripts/: docker-init.sh
tools/: context_builder.py
(+16 files in other folders)
