[project]
name = "bot-seguridad-social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.2",
    "docling>=2.58.0",
    "groq>=0.33.0",
    "ollama>=0.6.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]

[tool.uv.workspace]
members = [
    "rag_app",
]
